--- a/src/icp_hello_world_rust_backend/Cargo.toml
+++ b/src/icp_hello_world_rust_backend/Cargo.toml
@@ -11,6 +11,11 @@ crate-type = ["cdylib"]
 [dependencies]
 candid = "0.10.3"
 ic-cdk = "0.12.0"
+gpt-encoder = "0.1.1"
+ic-stable-structures = "0.6.3"
+ic-cdk-timers = "0.7.0"
+serde = {version= "1.0.197", features= ["derive"]}
+serde_json = "1.0"
 
 [dev-dependencies]
 pocket-ic = "4.0.0"
